article/static/article/css/blocks.less
@import "static/css/common.less";

.modular-content {
  font-family: 'Fira Sans', 'Open Sans', sans-serif;
  line-height: 29px;
  font-size: 17px;
  margin-bottom: 10px;

  .image-block {
    background: white;

    .image {
      position: relative;
      background: black;
      height: 380px;
      img {
        position: absolute;
        left: 0;
        right: 0;
        top: 0;
        bottom: 0;
        margin: auto;

        width: auto !important;
        max-width: 100%;
        height: auto;
        max-height: 100%;
        display: block;
        vertical-align: middle;
      }
    }
    .caption {
      font-style: italic;
    }
  }

  .full-width-image-block {
    margin: 10px;
    img {
      width: 100%;
    }
  }

  .paragraph-block {
    padding-left: 15%;
    padding-right: 15%;
    text-align: left;

    p {
      text-align: left;
      margin: 10px 0;
    }

    p:lang(ur) {
      text-align: right;
    }

    ul {
      list-style: disc;
      padding-left: 40px;
    }

    &.text-align-center {
      text-align: center;

      p {
        text-align: center;
      }
    }
  }

  .paragraph-with-quote-block {
    clear: both;
    display: table;
    .quote-align-right {
      float: right;
      padding-left: 30px;
    }
    .quote-align-left {
      float: left;
      padding-right: 0px;
    }
    .quote-align-left:lang(ur) {
      margin-left: 1%;
      padding-right: 15px;
    }
    &.row {
      margin-left: 0px;
      margin-right: 0px;
    }
    .quote-align-left.block-quote {
      .rich-text {
        margin-left: 10%;
        .paragraph-holder{
          margin-left: 15px;
        }
      }
      .rich-text:lang(ur){
        margin-right: 13px;
      }
    }

    .block-quote {
      .rich-text {
        border-bottom: 1px solid #FF3D08;
        border-top: 1px solid #FF3D08;
        width: 80%;
        font-family: 'Amiri', serif;
        padding-right: 0px;
        margin-right: 0px;
        margin-top: 20px;
        width: 84%;
        .paragraph-holder {
          width: 100%;
          color: #FF3D08 !important;
          line-height: 1.7em;
          padding: 12px 20px 12px 20px;
          font-size: 2.0em;
          margin-top: 0px;
          margin-bottom: 0px;
          margin-left: 6px;
        }
        .paragraph-holder:lang(ur) {
          width: 100%;
          padding-right: 0;
          em {
            padding-right: 0;
          }
          strong {
            padding-right: 0;
          }
        }
      }
      .rich-text:lang(ur) {
        width: 93%;
        margin-right: 30px;
        margin-top: 20px;
      }
    }
  }

  .paragraph-with-image-block {

    .image-align-right {
      float: right;
      padding-left: 30px;
    }

    .image-align-left {
      float: left;
      padding-right: 30px;
    }

  }

  @media (max-width: @screen-sm-max) {
    .paragraph-with-quote-block {

      .quote-align-left.block-quote {
        margin-left: 0;
        .rich-text {
          margin: 2%;
          width: 100%;
          margin-top: 1%;
          margin-bottom: 5%;
        }
      }
      .quote-align-left.block-quote:lang(ur) {
        .rich-text {
          margin: 0%;
          width: 100%;
          margin-top: 1%;
          margin-bottom: 5%;

        }
      }
      .quote-align-right.block-quote {
        .rich-text {
          margin: 2%;
          width: 100%;
          margin-top: 1%;
          margin-bottom: 5%;
        }
      }
    }
    .quote-align-right.block-quote:lang(ur) {
        .rich-text {
          margin: 2%;
          width: 100%;
          margin-top: 1%;
          margin-bottom: 5%;
        }
      }
  }
}

